--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
             <textarea id="txt-input" placeholder="Put your sentence in English here and we will conver it to banana language!!"></textarea>
             <button id="btn-translate">Translate To Banana</button>
-            <div style="font-size: larger">Translation will come here 👇</div>
+            <h3>Translation will come here 👇</h3>
             <div id="output" style="padding: 1rem; font-size: large;"></div>
         </main>
         
