--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <div class="content">
         <nav>
             <div style="font-size: 2rem; padding: 1rem;">
-                Speak Bananaaaa
+                <h1>Speak Valyrian</h1>
             </div>
         </nav>
     
         <main>
-            <textarea id="txt-input" placeholder="Put your sentence in English here and we will conver it to banana language!!"></textarea>
-            <button id="btn-translate">Translate To Banana</button>
+            <textarea id="txt-input" placeholder="Put your sentence in English here and we will conver it to Valyrian language!!"></textarea>
+            <button id="btn-translate">Translate To Valyrian</button>
             <h3>Translation will come here 👇</h3>
             <div id="output" style="padding: 1rem; font-size: large;"></div>
         </main>
         
         <footer>
-            <div style="font-size: x-large;">about</div>
-            <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator
-                to convert your text from English to Minion speak or Banana language.</p>
+            <div style="font-size: x-large;">About</div>
+            <p>Are you a fan of Game Of Thrones? Did you know that the language Queen Daenerys Targaryen speaks is an actual language. Use the translator
+                to convert your text from English to Valyrian.</p>
         </footer>
     </div>
 </body>
