--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content">
         <nav>
             <div style="font-size: 2rem; padding: 1rem;">
-                <h3>Speak Valyrian</h3>
+                <h2>Speak Valyrian</h2>
             </div>
         </nav>
     
@@ -29,6 +29,8 @@
             <p>Are you a fan of Game Of Thrones? Did you know that the language Queen Daenerys Targaryen speaks is an actual language. Use the translator
                 to convert your text from English to Valyrian.</p>
         </footer>
+
+        <script src="/app.js" type="text/javascript"></script>
     </div>
 </body>
 </html>
